updated player combine stats routes

--- a/lib/draft_guru_web/controllers/player_combine_stats_html/edit.html.heex
+++ b/lib/draft_guru_web/controllers/player_combine_stats_html/edit.html.heex
@@ -3,6 +3,6 @@
     <:subtitle>Use this form to edit player records for their draft combine stats</:subtitle>
 </.header>
 
-<.combine_stats_form_edit changeset={@changeset} action={~p"/player_combine_stats/#{@player}"} />
+<.combine_stats_form_edit changeset={@changeset} action={~p"/models/player_combine_stats/#{@player}"} />
 
-<.back navigate={~p"/player_combine_stats"}>Back to player combine stats</.back>
+<.back navigate={~p"/models/player_combine_stats"}>Back to player combine stats</.back>
