--- a/lib/draft_guru_web/controllers/player_combine_stats_html/index.html.heex
+++ b/lib/draft_guru_web/controllers/player_combine_stats_html/index.html.heex
@@ -1,13 +1,13 @@
 <.header>
     Master list of draft combine stats for individual players
     <:actions>
-        <.link href={~p"/player_combine_stats/new"}>
+        <.link href={~p"/models/player_combine_stats/new"}>
             <.button>New Player Combine Stats</.button>
         </.link>
     </:actions>
 </.header>
 
-<form action = "/player_combine_stats" method="get" class="flex items-center gap-2 mb-4">
+<form action = "/models/player_combine_stats" method="get" class="flex items-center gap-2 mb-4">
 <input
  type="text"
  name="player_name"
@@ -22,14 +22,14 @@
 <.table 
     id = "player_combine_stats"
     rows = {@players}
-    row_click = {&JS.navigate(~p"/player_combine_stats/#{&1}")}
+    row_click = {&JS.navigate(~p"/models/player_combine_stats/#{&1}")}
     container_class="pl-0 sm:px-0"
     table_class="px-0 w-full"
 >
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=player_name&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "player_name")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=player_name&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "player_name")}&player_name=#{@search}"}>
           Player Name
           </.link>
           """}
@@ -42,7 +42,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=draft_year&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "draft_year")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=draft_year&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "draft_year")}&player_name=#{@search}"}>
           Draft Year
           </.link>
           """}
@@ -55,7 +55,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=position&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "position")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=position&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "position")}&player_name=#{@search}"}>
           Position
           </.link>
           """}
@@ -66,7 +66,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=player_slug&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "player_slug")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=player_slug&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "player_slug")}&player_name=#{@search}"}>
           Player Slug
           </.link>
           """}
@@ -77,7 +77,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=lane_agility_time&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "lane_agility_time")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=lane_agility_time&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "lane_agility_time")}&player_name=#{@search}"}>
           Lane Agility
           </.link>
           """}
@@ -88,7 +88,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=shuttle_run&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "shuttle_run")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=shuttle_run&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "shuttle_run")}&player_name=#{@search}"}>
           Shuttle Run
           </.link>
           """}
@@ -99,7 +99,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=three_quarter_sprint&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "three_quarter_sprint")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=three_quarter_sprint&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "three_quarter_sprint")}&player_name=#{@search}"}>
           3/4 Sprint
           </.link>
           """}
@@ -110,7 +110,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=standing_vertical_leap&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "standing_vertical_leap")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=standing_vertical_leap&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "standing_vertical_leap")}&player_name=#{@search}"}>
           Standing Vertical Leap
           </.link>
           """}
@@ -121,7 +121,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=max_vertical_leap&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "max_vertical_leap")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=max_vertical_leap&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "max_vertical_leap")}&player_name=#{@search}"}>
           Max Vertical Leap
           </.link>
           """}
@@ -132,7 +132,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=max_bench_press_repetitions&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "max_bench_press_repetitions")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=max_bench_press_repetitions&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "max_bench_press_repetitions")}&player_name=#{@search}"}>
           Max Bench
           </.link>
           """}
@@ -143,7 +143,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=height_w_shoes&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "height_w_shoes")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=height_w_shoes&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "height_w_shoes")}&player_name=#{@search}"}>
           Height w/ Shoes
           </.link>
           """}
@@ -154,7 +154,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=height_wo_shoes&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "height_wo_shoes")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=height_wo_shoes&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "height_wo_shoes")}&player_name=#{@search}"}>
           Height w/o Shoes
           </.link>
           """}
@@ -165,7 +165,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=body_fat_pct&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "body_fat_pct")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=body_fat_pct&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "body_fat_pct")}&player_name=#{@search}"}>
           Body Fat %
           </.link>
           """}
@@ -176,7 +176,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=hand_length&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "hand_length")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=hand_length&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "hand_length")}&player_name=#{@search}"}>
           Hand Length
           </.link>
           """}
@@ -187,7 +187,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=hand_length_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "hand_length_inches")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=hand_length_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "hand_length_inches")}&player_name=#{@search}"}>
           Hand Length Inches
           </.link>
           """}
@@ -198,7 +198,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=hand_width&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "hand_width")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=hand_width&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "hand_width")}&player_name=#{@search}"}>
           Hand Width
           </.link>
           """}
@@ -209,7 +209,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=hand_width_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "hand_width_inches")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=hand_width_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "hand_width_inches")}&player_name=#{@search}"}>
           Hand Width Inches
           </.link>
           """}
@@ -220,7 +220,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=standing_reach&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "standing_reach")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=standing_reach&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "standing_reach")}&player_name=#{@search}"}>
           Standing Reach
           </.link>
           """}
@@ -231,7 +231,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=standing_reach_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "standing_reach_inches")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=standing_reach_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "standing_reach_inches")}&player_name=#{@search}"}>
           Standing Reach Inches
           </.link>
           """}
@@ -242,7 +242,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=weight_lbs&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "weight_lbs")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=weight_lbs&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "weight_lbs")}&player_name=#{@search}"}>
           Weight (lbs)
           </.link>
           """}
@@ -253,7 +253,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=wingspan&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "wingspan")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=wingspan&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "wingspan")}&player_name=#{@search}"}>
           Wingspan
           </.link>
           """}
@@ -264,7 +264,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=wingspan_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "wingspan_inches")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=wingspan_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "wingspan_inches")}&player_name=#{@search}"}>
           Wingspan Inches
           </.link>
           """}
@@ -275,7 +275,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=height_w_shoes_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "height_w_shoes_inches")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=height_w_shoes_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "height_w_shoes_inches")}&player_name=#{@search}"}>
           Height w/ Shoes (inches)
           </.link>
           """}
@@ -286,7 +286,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=height_wo_shoes_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "height_wo_shoes_inches")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=height_wo_shoes_inches&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "height_wo_shoes_inches")}&player_name=#{@search}"}>
           Height w/o Shoes (inches)
           </.link>
           """}
@@ -297,7 +297,7 @@
 
 <:col 
   label = {~H"""
-          <.link navigate={"/player_combine_stats?sort_field=player_id&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "player_id")}&player_name=#{@search}"}>
+          <.link navigate={"/models/player_combine_stats?sort_field=player_id&sort_direction=#{toggle_sort(@sort_field, @sort_direction, "player_id")}&player_name=#{@search}"}>
           Canonical Player ID
           </.link>
           """}
@@ -308,13 +308,13 @@
 
   <:action :let={lookup}>
     <div class="sr-only">
-      <.link navigate={~p"/player_combine_stats/#{lookup}"}>Show</.link>
+      <.link navigate={~p"/models/player_combine_stats/#{lookup}"}>Show</.link>
     </div>
-    <.link navigate={~p"/player_combine_stats/#{lookup}/edit"}>Edit</.link>
+    <.link navigate={~p"/models/player_combine_stats/#{lookup}/edit"}>Edit</.link>
   </:action>
 
   <:action :let={lookup}>
-    <.link href={~p"/player_canonical/#{lookup}"} method="delete" data-confirm="Are you sure?">
+    <.link href={~p"/models/player_combine_stats/#{lookup}"} method="delete" data-confirm="Are you sure?">
       Delete
     </.link>
   </:action>
@@ -332,14 +332,14 @@
  <div class="join">
     <%= if current_page > 1 do %>
         <button class="join-item btn">
-        <a href={"/player_combine_stats?page=1&player_name=#{@search}"}>First</a>
+        <a href={"/models/player_combine_stats?page=1&player_name=#{@search}"}>First</a>
         </button>
     <% end %>
 
     <%= if current_page > 1 do %>
 
       <button class="join-item btn">
-        <a href={"/player_combine_stats?page=#{current_page - 1}&player_name=#{@search}"}>Previous</a>
+        <a href={"/models/player_combine_stats?page=#{current_page - 1}&player_name=#{@search}"}>Previous</a>
       </button>
     <% end %>
 
@@ -348,7 +348,7 @@
 <%= if page_number < total_pages do %>
 
   <button class={"join-item btn " <> if page_number == current_page, do: "btn-active", else: ""}>
-    <a href={"/player_combine_stats?page=#{page_number}&player_name=#{@search}"}>
+    <a href={"/models/player_combine_stats?page=#{page_number}&player_name=#{@search}"}>
       <%= page_number %>
     </a>
   </button>
@@ -360,11 +360,11 @@
     <%= if current_page < total_pages do %>
 
       <button class="join-item btn">
-        <a href={"/player_combine_stats?page=#{current_page + 1}&player_name=#{@search}"}>Next</a>
+        <a href={"/models/player_combine_stats?page=#{current_page + 1}&player_name=#{@search}"}>Next</a>
       </button>
 
       <button class="join-item btn">
-        <a href={"/player_combine_stats?page=#{total_pages}&player_name=#{@search}"}>Last</a>
+        <a href={"/models/player_combine_stats?page=#{total_pages}&player_name=#{@search}"}>Last</a>
       </button>      
 
 
