--- a/lib/draft_guru_web/components/layouts/root.html.heex
+++ b/lib/draft_guru_web/components/layouts/root.html.heex
@@ -18,6 +18,7 @@
     <li class="text-[0.8125rem] leading-6 text-zinc-900 py-2">
       {@current_users.email}
     </li>
+    <%= if @current_users.user_role_id == 1 do %>
     <li class="relative group">
       <button class="text-[0.8125rem] leading-6 text-zinc-900 font-semibold hover:text-zinc-700 py-2">
         Data
@@ -51,6 +52,8 @@
 
       </ul>
     </li>
+
+    <% end %>
 
     <li>
       <.link
