finished initial player_info context

--- a/lib/draft_guru_web/components/layouts/root.html.heex
+++ b/lib/draft_guru_web/components/layouts/root.html.heex
@@ -49,6 +49,14 @@
                Player Combine Stats
              </.link>
            </li>
+          <li>
+             <.link
+               href={~p"/models/player_info"}
+               class="block px-4 py-2 text-[0.8125rem] leading-6 text-zinc-900 hover:bg-zinc-100"
+             >
+               Player Info
+             </.link>
+           </li>
 
       </ul>
     </li>
