--- a/lib/draft_guru_web/controllers/player_info_html/edit.html.heex
+++ b/lib/draft_guru_web/controllers/player_info_html/edit.html.heex
@@ -3,6 +3,6 @@
   <:subtitle>Update biographical details and images.</:subtitle>
 </.header>
 
-<.render file="_form.html", changeset: @changeset, action: ~p"/models/player_info/#{@player_info}", player_info: @player_info, players_for_select: @players_for_select />
+<.player_info_form changeset={@changeset} action={~p"/models/player_info/#{@player_info}"} player_info={@player_info} players_for_select={@players_for_select} />
 
 <.back navigate={~p"/models/player_info"}>Back to Player Infos</.back>
