updated player context code

--- a/lib/draft_guru_web/controllers/player_info_html/player_info_form.html.heex
+++ b/lib/draft_guru_web/controllers/player_info_html/player_info_form.html.heex
@@ -22,6 +22,7 @@
         "Big 12",
         "Big 10",
         "ACC",
+        "AAC",
         "WCC",
         "Euroleague",
         "G-League Ignite",
