--- a/lib/draft_guru_web/controllers/player_info_html/player_info_form.html.heex
+++ b/lib/draft_guru_web/controllers/player_info_html/player_info_form.html.heex
@@ -50,22 +50,22 @@
   <%!-- Headshot Input --%>
   <div class="my-4">
     <.label>Headshot</.label>
-    <%= if @changeset.data.headshot do %>
-      <img src={image_url(@changeset.data.headshot)} alt="Current Headshot" class="my-2 h-24 w-24 object-cover border" />
+    <%= if @changeset.data.headshot_path do %>
+      <img src={image_url(@changeset.data, :headshot_path)} alt="Current Headshot" class="my-2 h-24 w-24 object-cover border" />
     <% end %>
     <.input field={f[:headshot]} type="file" label="Upload New Headshot" />
-    <.error :for={err <- f[:headshot].errors}>{err}</.error>
+    <.error :for={err <- f[:headshot].errors}>{translate_error(err)}</.error>
     <.input field={f[:remove_headshot]} type="checkbox" label="Remove current headshot" />
   </div>
 
   <%!-- Stylized Image Input --%>
   <div class="my-4">
     <.label>Stylized Image</.label>
-    <%= if @changeset.data.stylized_image do %>
-      <img src={image_url(@changeset.data.stylized_image)} alt="Current Stylized Image" class="my-2 h-24 w-auto object-contain border" />
+    <%= if @changeset.data.stylized_image_path do %>
+      <img src={image_url(@changeset.data, :stylized_image_path)} alt="Current Stylized Image" class="my-2 h-24 w-auto object-contain border" />
     <% end %>
     <.input field={f[:stylized_image]} type="file" label="Upload New Stylized Image" />
-     <.error :for={err <- f[:stylized_image].errors}>{err}</.error>
+     <.error :for={err <- f[:stylized_image].errors}>{translate_error(err)}</.error>
      <.input field={f[:remove_stylized_image]} type="checkbox" label="Remove current stylized image" />
   </div>
 
