--- a/lib/draft_guru_web/controllers/player_info_html/index.html.heex
+++ b/lib/draft_guru_web/controllers/player_info_html/index.html.heex
@@ -25,7 +25,7 @@
      <%= if pi.headshot_path do %>
        <img src={image_url(pi, :headshot_path)} alt="Headshot" class="h-10 w-10 object-cover"/>
      <% else %>
-       <.icon name="hero-user-circle" class="h-10 w-10 text-gray-400" />
+       <img src="/uploads/default_avatar.png" alt="Default Avatar" class="h-10 w-10 object-cover"/>
      <% end %>
    </:col>
 
