updated player info tables

--- a/lib/draft_guru_web/controllers/player_info_html/index.html.heex
+++ b/lib/draft_guru_web/controllers/player_info_html/index.html.heex
@@ -30,6 +30,7 @@
   row_click={&JS.navigate(~p"/models/player_info/#{&1}")}
   >
   <:col label="ID" :let={pi}><%= pi.id %></:col>
+  <:col label="Player ID" :let={pi}><%= pi.player_id %></:col>
   <:col label="Player" :let={pi}>
     <%= pi.player_canonical.first_name %> <%= pi.player_canonical.last_name %> <%= if pi.player_canonical.suffix, do: "(#{pi.player_canonical.suffix})" %>
   </:col>
