--- a/lib/draft_guru_web/controllers/player_info_html/player_info_form.html.heex
+++ b/lib/draft_guru_web/controllers/player_info_html/player_info_form.html.heex
@@ -47,6 +47,8 @@
     required
   />
 
+  <.input field={f[:is_active]} type="checkbox" label="Active" />
+
   <%!-- Headshot Input --%>
   <div class="my-4">
     <.label>Headshot</.label>
