--- a/lib/draft_guru_web/controllers/player_html/player_form.html.heex
+++ b/lib/draft_guru_web/controllers/player_html/player_form.html.heex
@@ -6,6 +6,7 @@
   <.input field={f[:middle_name]} type="text" label="Middle name" />
   <.input field={f[:last_name]} type="text" label="Last name" />
   <.input field={f[:suffix]} type="text" label="Suffix" />
+  <.input field={f[:birth_date]} type="date" label="Birth date" />
   <:actions>
     <.button>Save Player</.button>
   </:actions>
