--- a/lib/draft_guru_web/controllers/player_html/show.html.heex
+++ b/lib/draft_guru_web/controllers/player_html/show.html.heex
@@ -13,6 +13,7 @@
   <:item title="Middle name">{@player.middle_name}</:item>
   <:item title="Last name">{@player.last_name}</:item>
   <:item title="Suffix">{@player.suffix}</:item>
+  <:item title="Birth date">{@player.birth_date}</:item>
 </.list>
 
 <.back navigate={~p"/models/player_canonical"}>Back to player_canonical</.back>
