--- a/lib/draft_guru_web/controllers/player_info_html/player_info_form.html.heex
+++ b/lib/draft_guru_web/controllers/player_info_html/player_info_form.html.heex
@@ -48,6 +48,7 @@
   />
 
   <.input field={f[:is_active]} type="checkbox" label="Active" />
+  <.input field={f[:played_in_nba]} type="checkbox" label="Played in NBA" />
 
   <%!-- Headshot Input --%>
   <div class="my-4">
